<resources>
    <string name="app_name">福域</string>
    <string name="error_msg">暂时没有数据哦~</string>
    <string name="empty_msg">暂时没有数据哦~</string>
    <string name="share_wechat">微信好友</string>
    <string name="share_weibo">新浪微博</string>
    <string name="share_qq">QQ好友</string>
    <string name="share_wechat_moments">朋友圈</string>
    <string name="share_qq_zoom">QQ空间</string>
    <string name="write_peromision_miss">请允许app读写权限</string>
    <string name="dkplayer_error_message">出了点小问题，请稍后重试</string>
    <string name="dkplayer_wifi_tip">您正在使用移动网络，继续播放将消耗流量</string>
    <string name="dkplayer_continue_play">继续播放</string>
    <string name="dkplayer_unlocked">已解锁</string>
    <string name="dkplayer_locked">已锁定</string>
    <string name="dkplayer_lock_tip">请先解锁屏幕！</string>
    <string name="dkplayer_replay">重新播放</string>
    <string name="dkplayer_retry"> 重   试 </string>
    <string name="base_fine_no_data">暂时没有数据哦~</string>
    <string name="base_click_me_to_retry">请稍后重试</string>
    <string name="net_error">您的网络不稳定,请刷新重试~</string>
    <string name="empty_car_tips">销售顾问正在积极准备您的爱车，暂无\n可以查看提车进度的车辆哦~</string>
    <string name="loading_tips">努力加载中</string>
    <string name="str_shareSuccess">分享成功啦~</string>
    <string name="platform_acts">平台</string>
    <string name="str_text">-------</string>
    <string name="str_fromYouRecently">距您最近</string>
    <string name="str_awayFromYouX">距您%1$s公里</string>
    <string name="str_upgradeYourCarExperience">升级您的用车体验</string>
    <string name="str_bindYourCar_x">绑定您的爱车，成为认证车主享受更多专属服务</string>
    <string name="str_toCertifyOwner">去认证车主</string>
    <string name="str_goToCertification">去认证</string>
    <string name="str_yourCarBindingIsUnderReview_x">您的爱车绑定正在审核，请耐心等待</string>
    <string name="str_look">查看</string>
    <string name="str_modifyData">修改名片</string>
    <string name="str_name">名</string>
    <string name="str_totalNumberQuestions">答题总数</string>
    <string name="str_adoptTotal">采纳总数</string>
    <string name="str_replyToList">回复榜</string>
    <string name="str_adoptionList">采纳榜</string>
    <string name="str_vehicleFailure">车辆故障</string>
    <string name="test_str">ford-123123123123。</string>
    <string name="str_immediatelyViesToAnswerFirst">立即抢答</string>
    <string name="str_questionHasNotBeenAnswered">该提问还没有人回答</string>
    <string name="str_hasBeenAdopted">已采纳</string>
    <string name="str_myQuestions">我的提问</string>
    <string name="str_myAnswer">我的回答</string>
    <string name="str_answerAccepted">回答被采纳</string>
    <string name="str_invitedToAnswer">邀请回答</string>
    <string name="str_taQuestions">TA的提问</string>
    <string name="str_taAnswer">TA的回答</string>
    <string name="str_accepted">被采纳</string>
    <string name="str_questionsTotalNumber">提问总数</string>
    <string name="str_answerTotalNumber">答题总数</string>
    <string name="str_acceptedTotalNumber">采纳总数</string>
    <string name="empty_question">买车用车，您想了解的都可以在这里得到解答</string>
    <string name="str_toAskQuestions">去提问</string>
    <string name="str_noContent">暂无内容</string>
    <string name="str_questions">提问</string>
    <string name="str_parametersOfIllegal">参数非法！</string>
    <string name="str_currentPosition">当前位置</string>
    <string name="str_pleaseInstallWechatBeforeUsingIt">请先安装微信后再使用</string>
    <string name="str_myFbX">我的福币%1$s</string>
    <string name="str_myFbX2">我的福币：</string>
    <string name="str_earnMoney">做任务 赚福币</string>
    <string name="str_loginToView">登录查看</string>
    <string name="str_recommendedList">推荐榜单</string>
    <string name="str_shop_recommendedList">商品推荐榜单</string>
    <string name="str_listName">榜单名称</string>
    <string name="str_since">起</string>
    <string name="reload">重试</string>
    <string name="fix_behavior">com.changanford.common.widget.FixAppBarLayoutBehavior</string>
    <string name="circle_behavior_app_bar_layout">com.changanford.circle.widget.FixAppBarLayoutBehavior</string>
    <string name="str_comments">评论</string>
    <string name="picture_camera_roll">相机胶卷</string>
    <string name="picture_camera_roll_num">%1$s (%2$d)</string>
    <string name="picture_cancel">取消</string>
    <string name="picture_take_picture">拍摄</string>
    <string name="picture_rule">不能同时选择图片或视频</string>
    <string name="picture_message_max_num">你最多只能选择%1$s张照片</string>
    <string name="picture_min_video_num">视频最低选择不能少于%1$s个</string>
    <string name="picture_message_video_max_num">你最多只能选择%1$s个视频</string>
    <string name="picture_message_audio_max_num">你最多只能选择%1$s个音频</string>
    <string name="picture_preview">预览</string>
    <string name="picture_please">请稍候…</string>
    <string name="picture_done_front_num">%1$d/%2$d 完成</string>
    <string name="picture_completed">已完成</string>
    <string name="picture_done">完 成</string>
    <string name="picture_please_select">请选择</string>
    <string name="picture_empty_title">无视频或照片\n</string>
    <string name="picture_empty_audio_title">无音频文件\n</string>
    <string name="picture_empty">你可以使用相机拍摄照片或视频</string>
    <string name="picture_audio_empty">你可以使用系统录音录制音频</string>
    <string name="picture_min_img_num">图片最低选择不能少于%1$s张</string>
    <string name="picture_gif_tag">gif</string>
    <string name="picture_webp_tag">webp</string>
    <string name="picture_video_toast">视频不可预览</string>
    <string name="picture_jurisdiction">读取内存卡权限被拒绝</string>
    <string name="picture_camera">获取系统相机权限被拒绝</string>
    <string name="picture_audio">获取系统录音权限被拒绝</string>
    <string name="picture_record_video">录视频</string>
    <string name="picture_photograph">拍照</string>
    <string name="picture_long_chart">长图</string>
    <string name="picture_warning">暂无媒体文件！</string>
    <string name="picture_prompt">提示</string>
    <string name="picture_prompt_content">是否保存图片至手机？</string>
    <string name="picture_save_error">图片保存失败</string>
    <string name="picture_save_success">图片保存成功至</string>
    <string name="picture_all_audio">所有音频</string>
    <string name="picture_tape">录音</string>
    <string name="picture_play_audio">播放</string>
    <string name="picture_stop_audio">停止</string>
    <string name="picture_quit_audio">退出</string>
    <string name="picture_pause_audio">暂停</string>
    <string name="picture_error">图片已损坏</string>
    <string name="picture_video_error">视频已损坏</string>
    <string name="picture_audio_error">音频已损坏</string>
    <string name="picture_confirm">确定</string>
    <string name="picture_preview_image_num">%1$d/%2$d</string>
    <string name="picture_not_crop_data">无可用裁剪数据</string>
    <string name="picture_original_image">原图 (%1$s)</string>
    <string name="picture_default_original_image">原图</string>
    <string name="picture_send">完成</string>
    <string name="picture_send_num">下一步(%1$d/%2$d)</string>
    <string name="picture_preview_num">预览(%1$d)</string>
    <string name="picture_select">选择</string>
    <string name="picture_data_exception">获取相册数据异常…</string>
    <string name="picture_recording_time_is_short">录制时间过短</string>
    <string name="picture_photo_camera">单击拍照，长按摄像</string>
    <string name="picture_photo_pictures">单击拍照</string>
    <string name="picture_photo_recording">长按摄像</string>
    <string name="picture_choose_max_seconds">最大只能选择 %1$ds 以内的视频</string>
    <string name="picture_choose_min_seconds">不能选择低于 %1$ds 内的视频</string>
    <string name="picture_choose_limit_seconds">只能选择 %1$ds 至 %2$ds内的视频</string>
    <string name="picture_go_setting">去设置</string>
    <string name="picture_know">我知道了</string>
    <string name="picture_data_null">这里空空如也…</string>
    <string name="picture_editor">编辑</string>

    <string name="ucrop_rotate">旋转</string>
    <string name="ucrop_scale">比例</string>
    <string name="ucrop_crop">裁剪</string>

    <string name="ucrop_label_original">原始比例</string>
    <string name="ucrop_label_edit_photo">编辑</string>

    <string name="ucrop_menu_crop">裁剪</string>
    <string name="ucrop_gif_tag">动图</string>
</resources>