<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ll_timeout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_F4"
    android:gravity="center"
    android:orientation="vertical">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:background="@mipmap/icon_common_net_error"
        android:contentDescription="@string/app_name" />

    <TextView
        android:id="@+id/tv_time_out"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/net_error"
        android:textColor="#999999"
        android:textSize="12sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/base_click_me_to_retry"
        android:visibility="gone" />
</LinearLayout>
