<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:text="分享到"
        android:textColor="@color/text_color"
        android:textSize="15sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="17dp"
        android:layout_marginBottom="19dp"
        android:gravity="center_vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/btn_share_wechat"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_weight="1"
                android:drawableTop="@mipmap/btn_share_wechat_moments"
                android:drawablePadding="10dp"
                android:gravity="center"
                android:text="微信"
                android:textColor="@color/text_color"
                android:textSize="12sp"
                android:visibility="visible"
                app:layout_constraintHorizontal_weight="1"
                app:layout_constraintRight_toLeftOf="@+id/btn_share_wechat"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/btn_share_wechat_moments"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_weight="1"
                android:drawableTop="@mipmap/btn_share_wechat"
                android:drawablePadding="@dimen/dp_10"
                android:gravity="center"
                android:text="@string/share_wechat_moments"
                android:textColor="@color/text_color"
                android:textSize="12sp"
                android:visibility="visible" />


            <TextView
                android:id="@+id/btn_share_qq"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_weight="1"
                android:drawableTop="@mipmap/btn_share_qq"
                android:drawablePadding="@dimen/dp_10"
                android:gravity="center"
                android:text="@string/share_qq"
                android:textColor="@color/text_color"
                android:textSize="12sp"
                android:visibility="visible"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_weight="1"
                app:layout_constraintLeft_toRightOf="@+id/btn_share_weibo" />

            <TextView
                android:id="@+id/btn_share_qqzoom"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_weight="1"
                android:drawableTop="@mipmap/btn_share_qqzoom"
                android:drawablePadding="@dimen/dp_10"
                android:gravity="center"
                android:text="@string/share_qq_zoom"
                android:textColor="@color/text_color"
                android:textSize="12sp"
                android:visibility="visible"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_weight="1"
                app:layout_constraintLeft_toRightOf="@+id/btn_share_weibo" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/btn_share_weibo"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawableTop="@mipmap/btn_share_weibo"
            android:drawablePadding="@dimen/dp_10"
            android:gravity="center"
            android:text="@string/share_weibo"
            android:textColor="@color/text_color"
            android:textSize="12sp"
            android:visibility="visible"
            app:layout_constraintHorizontal_weight="1"
            app:layout_constraintLeft_toRightOf="@+id/btn_share_wechat"
            app:layout_constraintRight_toLeftOf="@+id/btn_share_qq" />

        <TextView

            android:id="@+id/btn_haibao"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_weight="1"
            android:drawableTop="@mipmap/btn_share_weibo"
            android:drawablePadding="@dimen/dp_10"
            android:gravity="center"
            android:text="海报"
            android:textColor="@color/text_color"
            android:textSize="12sp"
            android:visibility="visible" />

        <TextView
            android:id="@+id/btn_copy"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp"
            android:layout_weight="1"
            android:drawableTop="@mipmap/btn_copy"
            android:drawablePadding="@dimen/dp_10"
            android:gravity="center"
            android:text="复制链接"
            android:textColor="@color/text_color"
            android:textSize="12sp"
            android:visibility="visible" />

        <TextView
            android:id="@+id/tv_tag"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:visibility="gone" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_marginTop="20dp"
        android:background="@color/alertdialog_line" />

    <LinearLayout
        android:id="@+id/ll_buttom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/ll_deleteact"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:padding="20dp"
            android:visibility="gone">

            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:background="@color/appblue" />

            <TextView

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="结束发布"
                android:textColor="@color/text_color"
                android:textSize="12sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="(作者可见)"
                android:textColor="#666666"
                android:textSize="9sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_act"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="10dp"
            android:visibility="gone"
            tools:visibility="visible">

            <LinearLayout
                android:id="@+id/ll_jubao"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="5dp"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@mipmap/jubao" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="举报" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_unlike"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="5dp"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@mipmap/unlike" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="不喜欢" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_pb"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="5dp"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical"
                android:visibility="invisible"
                tools:visibility="visible">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@mipmap/ic_hb_xz" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="下架" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_jbs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="10dp"
            android:visibility="gone"
            tools:visibility="visible">

            <LinearLayout
                android:id="@+id/ll_jj"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="5dp"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@mipmap/ic_jj_s" />

                <TextView
                    android:id="@+id/jj_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="申请加精" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_bj"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="5dp"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical"
                android:visibility="gone"
                tools:visibility="visible">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@mipmap/ic_bj_s" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="编辑" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_sc"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="5dp"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@mipmap/ic_sc_s" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="删除" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:background="#fff6f6f6" />
    </LinearLayout>

    <TextView

        android:id="@+id/tvclose"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_bt_blue_corner39"
        android:gravity="center"
        android:padding="10dp"
        android:layout_margin="@dimen/dp_20"
        android:text="取消"
        android:textColor="@color/white"
        android:textSize="15sp" />
</LinearLayout>